Fix top logo overflow into the first-content

--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,6 @@ a {
     justify-content: space-around;
     padding: 5%;
 }
-.right-top-content-title {
-    
-}
 
 .right-top-content {
     width: 7cm;
